# ar-tu-do

./: ..gitignore.swp  .clang-format  .gitignore  .gitignore.save  .gitmodules  .travis.yml  CPP_STYLE_GUIDE.md  Doxyfile  MIT.LICENSE  README.md  clang-format-script.sh  format-src.sh
ros_ws/src/autonomous/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/emergency_stop/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/emergency_stop/cfg/: emergency_stop.cfg
ros_ws/src/autonomous/emergency_stop/include/: emergency_stop.h  rviz_geometry_publisher.h
ros_ws/src/autonomous/emergency_stop/launch/: emergency_stop.launch
ros_ws/src/autonomous/emergency_stop/src/: emergency_stop.cpp  rviz_geometry_publisher.cpp
ros_ws/src/autonomous/evolutionary/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/evolutionary/launch/: autonomous_driving.launch  evolutionary_training.launch
ros_ws/src/autonomous/evolutionary/scripts/: drive.py  neural_car_driver.py  parameters.py  train.py
ros_ws/src/autonomous/include/: autonomous_control.h  emergency_stop.h  pid_controller.h  rviz_geometry_publisher.h  topics.h  wall.h  wall_following.h
ros_ws/src/autonomous/launch/: autonomous_driving.launch
ros_ws/src/autonomous/neuralnetwork/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/neuralnetwork/config/: random.net
ros_ws/src/autonomous/neuralnetwork/configs/: default.conf  latest.conf  random.config
ros_ws/src/autonomous/neuralnetwork/include/: ai_config.h  ai_driver.h  ai_enum.h  ai_math.h  ai_trainer.h  ai_trainer_workspace.h  ai_util.h  ai_vector_math.h  crash_detector.h
ros_ws/src/autonomous/neuralnetwork/launch/: neuralnetwork.launch
ros_ws/src/autonomous/neuralnetwork/msg/: net_param.msg
ros_ws/src/autonomous/neuralnetwork/src/: ai_driver.cpp  ai_trainer.cpp  crash_detector.cpp
ros_ws/src/autonomous/q_learning/: CMakeLists.txt  model.to  package.xml
ros_ws/src/autonomous/q_learning/launch/: policy_gradient.launch  q_learning.launch
ros_ws/src/autonomous/q_learning/scripts/: car.py  drive.py  learn.py  parameters.py  plotter.py  policyGradient.py  policyGradient2.py  policyGradient3.py  qlearning.py  train.py
ros_ws/src/autonomous/reinfocement_learning/launch/: autonomous_driving.launch
ros_ws/src/autonomous/reinfocement_learning/scripts/: parameters.py
ros_ws/src/autonomous/reinforcement_learning/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/reinforcement_learning/launch/: autonomous_driving.launch  drive_policy_gradient.launch  drive_q_learning.launch  policy_gradient.launch  q_learning.launch  train_policy_gradient.launch  train_q_learning.launch
ros_ws/src/autonomous/reinforcement_learning/msg/: EpisodeResult.msg
ros_ws/src/autonomous/reinforcement_learning/scripts/: drive_policy_gradient.py  drive_q_learning.py  parameters.py  parameters_policy_gradient.py  parameters_q_learning.py  plotter.py  policyGradient.py  reinforcement_learning_node.py  topics.py  train_policy_gradient.py  train_q_learning.py  training_node.py
ros_ws/src/autonomous/script/: circle.py  wall2.py
ros_ws/src/autonomous/src/: autonomous_control.cpp  emergency_stop.cpp  pid_controller.cpp  rviz_geometry_publisher.cpp  wall.cpp  wall_following.cpp
ros_ws/src/autonomous/wallfollowing1/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/wallfollowing1/cfg/: wallfollowing1.cfg
ros_ws/src/autonomous/wallfollowing1/include/: emergency_stop.h  wall.h  wall_following.h
ros_ws/src/autonomous/wallfollowing1/launch/: autonomous_driving.launch
ros_ws/src/autonomous/wallfollowing1/src/: emergency_stop.cpp  pid_controller.cpp  wall.cpp  wall_following.cpp
ros_ws/src/autonomous/wallfollowing2/: CMakeLists.txt  package.xml
ros_ws/src/autonomous/wallfollowing2/cfg/: fast.yaml  physical.yaml  wallfollowing2.cfg
ros_ws/src/car_control/: CMakeLists.txt  package.xml
ros_ws/src/car_control/include/: car_control.h  car_controller.h  dms_controller.h  drive_mode.h  drive_parameters_multiplexer.h  drive_parameters_source.h  topics.h
ros_ws/src/car_control/launch/: car.rviz  car_control.launch
ros_ws/src/car_control/src/: car_control.cpp  car_controller.cpp  dms_controller.cpp  drive_parameters_multiplexer.cpp  drive_parameters_source.cpp
ros_ws/src/car_tf/: CMakeLists.txt  package.xml
ros_ws/src/car_tf/include/: laserscan_transformer.h
ros_ws/src/car_tf/launch/: car_transformer.launch
ros_ws/src/car_tf/src/: laserscan_transformer.cpp  main.cpp  tf_laserscan_to_pointcloud.cpp
ros_ws/src/drive_msgs/: CMakeLists.txt  package.xml
ros_ws/src/drive_msgs/msg/: pid_input.msg
ros_ws/src/hardware/: CMakeLists.txt  package.xml  razor_imu_config.yaml
ros_ws/src/hardware/launch/: static_wheel_publisher.launch
ros_ws/src/navigation_stack/car_cartographer/: CMakeLists.txt  package.xml
ros_ws/src/navigation_stack/msgs_converter/: CMakeLists.txt  package.xml
ros_ws/src/navigation_stack/navigation_stack_config/: CMakeLists.txt  package.xml
ros_ws/src/navigation_stack/navigation_stack_control_converter/: package.xml
ros_ws/src/q_learning/: CMakeLists.txt  package.xml
ros_ws/src/q_learning/scripts/: car.py  learn.py  policyGradient.py  ring_buffer.py
ros_ws/src/ros_lidar_control/: CMakeLists.txt  package.xml
ros_ws/src/ros_lidar_control/src/: car_control_lidar.cpp
ros_ws/src/simulation/racer_control/: CMakeLists.txt  package.xml
ros_ws/src/simulation/racer_description/: CMakeLists.txt  package.xml
ros_ws/src/simulation/racer_sensors/: CMakeLists.txt  package.xml
ros_ws/src/simulation/racer_world/: CMakeLists.txt  package.xml
ros_ws/src/teleoperation/: CMakeLists.txt  package.xml
ros_ws/src/teleoperation/cfg/: joystick_controller.cfg  keyboard_controller.cfg
ros_ws/src/teleoperation/include/: joystick_controller.h  joystick_map.h  joystick_map_ps3.h  joystick_map_xbox360.h  joystick_map_xboxone.h  keyboard_controller.h  remote_joy.h  remote_keyboard.h  topics.h
ros_ws/src/teleoperation/launch/: remote_control.launch
ros_ws/src/teleoperation/src/: joystick_controller.cpp  keyboard_controller.cpp  remote_joy.cpp  remote_keyboard.cpp
(+2674 files in other folders)
