<?xml version="1.0"?>
<package format="2">
  <name>autonomous</name>
  <version>0.0.0</version>
  <description>This package contains all code related to autonomous operation of the car.</description>

  <!-- Maintainer -->
  <maintainer email="stefan@todo.todo">stefan</maintainer>

  <!-- License -->
  <license>MIT, GPLv3</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>drive_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
