<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>q_learning</name>
  <version>0.0.0</version>
  <description>Contains code for a Deep Q-Learning node that learns to steer the car</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>drive_msgs</depend>
</package>
