<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>navigation_stack_control_converter</name>
  <version>0.0.0</version>
  <description>converts cmd_vel messages to drive_param messages</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>drive_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>vesc_msgs</depend>
  <depend>vesc_sim</depend>
</package>
