<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>racer_control</name>
  <version>0.0.0</version>
  <description>The "racer_control" package relays the drive commands to the simulated Gazebo car.</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
</package>
