<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>racer_description</name>
  <version>0.0.0</version>
  <description>The "racer_description" package contains a model of the racing car.</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <!-- Dependencies -->
  <depend>catkin</depend>
  <depend>ros_controllers</depend>

</package>
