<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>racer_world</name>
  <version>0.0.0</version>
  <description>The "racer_world" package contains launch files for the simulation of the car.</description>

  <!-- Maintainer -->
  <maintainer email="f110@ls12.cs.uni-dortmund.de">PG F1/10</maintainer>

  <!-- License -->
  <license>MIT</license>
  <license>GPLv3</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Enables gazebo to find the .dae files with relative path "model://" -->
    <gazebo_ros gazebo_model_path="${prefix}/meshes/" />
  </export>
</package>
